--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
