--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "sass": "^1.37.5",
     "typescript": "4.3.5"
   }
 }
