--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"./{src,pages}/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -20,6 +21,9 @@
     "@types/react": "17.0.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2",
     "sass": "^1.37.5",
     "typescript": "4.3.5"
   }
