--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"./{src,pages}/**/*.{js,jsx,ts,tsx}\""
+    "format": "prettier --write \"./{src,pages,data}/**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "classnames": "^2.3.1",
