--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"./{src,pages,data}/**/*.{js,jsx,ts,tsx,json,scss}\""
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "11.0.1",
+    "normalize.css": "^8.0.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,6 +21,10 @@
     "@types/react": "17.0.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2",
+    "sass": "^1.37.5",
     "typescript": "4.3.5"
   }
 }
