--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "prettier --write \"./{src,pages,data}/**/*.{js,jsx,ts,tsx,json,scss}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
     "classnames": "^2.3.1",
     "next": "11.0.1",
     "normalize.css": "^8.0.1",
