--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.3.0",
     "classnames": "^2.3.1",
     "next": "11.0.1",
