--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.2",
     "@types/react": "17.0.15",
     "cypress": "^9.4.1",
     "eslint": "7.32.0",
