--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -12,5 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Path resources healthcheck
         uses: cypress-io/github-action@v2
+        env:
+          CYPRESS_BASE_URL: https://the-learning-path.vercel.app
         with:
           spec: cypress/integration/paths/resources.spec.ts # Running only resources tests
