Health-check workflow tweaks

--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -8,11 +8,15 @@ on:
 jobs:
   Health-check:
     runs-on: ubuntu-latest
+    timeout-minutes: 45 # to prevent a hanging process from using all CI minutes
     steps:
       - uses: actions/checkout@v2
       - name: Path resources healthcheck
         uses: cypress-io/github-action@v2
         env:
-          CYPRESS_BASE_URL: https://the-learning-path.vercel.app
+          CYPRESS_baseUrl: https://the-learning-path.vercel.app
+          CYPRESS_retries: 2
+          CYPRESS_pageLoadTimeout: 60000
+          CYPRESS_requestTimeout: 60000
         with:
           spec: cypress/integration/paths/resources.spec.ts # Running only resources tests
