--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.3.0",
+    "ajv": "^8.11.0",
     "classnames": "^2.3.1",
     "next": "11.0.1",
     "normalize.css": "^8.0.1",
