--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.2",
     "@types/react": "17.0.15",
-    "cypress": "^9.5.0",
+    "cypress": "11.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
