--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/cypress": "8.0.7",
     "@types/react": "17.0.15",
     "cypress": "11.2.0",
     "eslint": "7.32.0",
