--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@testing-library/cypress": "8.0.7",
     "@types/react": "17.0.15",
     "cypress": "11.2.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "prettier": "^2.3.2",
-    "typescript": "4.3.5"
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "5.2.2"
   }
 }
