--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,8 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10 # to prevent a hanging process from using all CI minutes
     steps:
-      - uses: actions/checkout@v2
-      - uses: amondnet/vercel-action@v20
+      - name: Setup Node 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Deploy
+        uses: amondnet/vercel-action@v20
         id: vercel-deployment
         with:
           vercel-project-name: 'the-learning-path'
