Feat/UI updates (#76)
* Mui dependencies update

* Scss removal

* Unused dependencies removal

* Browserslist update

* Villain graphics removal

* Dev build dependencies update

to allow for preview building

* Next update

hoping it builds this time

* Dependencies update

hoping it builds this time

* Github preview workflow update

eventually it will build

* Workflows update

* Workflows update

* Workflows update

* Layout tweaks

* Title warning fix

* React types update

* Help panel temporarily commented

* LayoutDrawer simplification

* LayoutDrawer closing on route change

* Header background update

* Paths description content in page

* Path schema branding

* Path schema branding page integration

* Path title text balance

* Brand data entry

* Hero tweaks

* Tweaks

* More tweaks

* Hero gradient calculated from colors array

* Logo as independent property in path schema

* Path schema hero properties renamings

* useLayoutContext theme export

* Schema validation improvements

* Gradients improvements

* Gradients improvements

* Logo images legal notices

* Layout Villain removal

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -11,8 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10 # to prevent a hanging process from using all CI minutes
     steps:
-      - uses: actions/checkout@v2
-      - uses: amondnet/vercel-action@v20
+      - name: Setup Node 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Deploy
+        uses: amondnet/vercel-action@v25
         id: vercel-deployment
         with:
           vercel-project-name: 'the-learning-path'
@@ -30,8 +36,10 @@ jobs:
     needs: Deploy
     timeout-minutes: 30 # to prevent a hanging process from using all CI minutes
     steps:
-      - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v4
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Cypress
+        uses: cypress-io/github-action@v4
         env:
           CYPRESS_BASE_URL: ${{ needs.Deploy.outputs.preview-url }}
         with:
