--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["es2017", "dom"],
-    "types": ["cypress", "@testing-library/cypress"]
+    "types": ["cypress", "@testing-library/cypress", "node"]
   },
   "include": ["**/*.ts"]
 }
