--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -46,3 +46,4 @@ jobs:
           spec: |
             cypress/e2e/paths/home.cy.ts
             cypress/e2e/paths/pages.cy.ts
+            cypress/e2e/paths/resources.cy.ts
