--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "ajv": "^8.11.0",
+    "idb": "^7.1.1",
     "next": "^13.4.19",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
