--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.2.0",
     "ajv-errors": "^3.0.0",
     "cypress": "13.2.0",
+    "cypress-recurse": "^1.35.2",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
