--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,3 +1,9 @@
 {
-	"extends": "../../tsconfig.json"
+	"extends": "../../tsconfig.json",
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
