--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,9 +1,16 @@
 {
 	"extends": "../../tsconfig.json",
+	"rootDir": "./src",
+	"compilerOptions": {
+		"noEmit": false,
+		"outDir": "./dist",
+		"rootDir": "."
+	},
   "include": [
     "**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+		"dist"
   ]
 }
