--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -2,10 +2,17 @@
   "name": "@sherpa/data",
   "version": "0.4.0",
   "private": true,
-  "scripts": {},
-  "dependencies": {},
+  "exports": {
+    ".": "./dist/index.js",
+    "./*": "./dist/*"
+  },
+  "scripts": {
+    "build": "tsc && npm run copy:json",
+    "copy:json": "cpy \"src/**/*.json\" dist"
+  },
   "devDependencies": {
     "ajv": "^8.11.0",
-    "ajv-errors": "^3.0.0"
+    "ajv-errors": "^3.0.0",
+    "cpy-cli": "^5.0.0"
   }
 }
