--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "@sherpa/configs/tsconfig.base.json",
   "include": [
     "next-env.d.ts",
     "**/*.ts",
