--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -4,7 +4,7 @@
 	"compilerOptions": {
 		"noEmit": false,
 		"outDir": "./dist",
-		"rootDir": "."
+		"rootDir": "./src"
 	},
   "include": [
     "**/*.ts"
