Revert "Initial monorepo setup"
This reverts commit 8e60beaedf6ad4754a39f271aa5dd4e5943f72a1.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@sherpa/configs/tsconfig.base.json",
+	"extends": "../../tsconfig.json",
   "include": [
     "next-env.d.ts",
     "**/*.ts",
