Initial monorepo setup

--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "devDependencies": {
+    "@sherpa/configs": "*",
     "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
     "turbo": "^1.11.2",
     "typescript": "5.2.2"
