--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "test:ci": "cypress run"
   },
   "dependencies": {
-		"@sherpa/data": "*",
+    "@sherpa/data": "*",
+    "@sherpa/configs": "*",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
