--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "@sherpa/configs/tsconfig.json",
 	"rootDir": "./src",
 	"compilerOptions": {
 		"noEmit": false,
