--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,19 @@
     "test:ci": "cypress run"
   },
   "dependencies": {
-    "@sherpa/data": "*",
-    "@sherpa/configs": "*",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
+    "@sherpa/data": "*",
+    "eslint-config-sherpa": "*",
     "idb": "^7.1.1",
     "next": "^13.4.19",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tsconfig-sherpa": "*"
   },
   "devDependencies": {
     "cypress": "13.2.0",
