--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,8 +1,7 @@
 {
-	"extends": "@sherpa/configs/tsconfig.json",
+	"extends": "tsconfig-sherpa/lib.json",
 	"rootDir": "./src",
 	"compilerOptions": {
-		"noEmit": false,
 		"outDir": "./dist",
 		"rootDir": "./src"
 	},
