Initial monorepo setup

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -6,13 +6,14 @@
     ".": "./dist/index.js",
     "./*": "./dist/*"
   },
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "tsc && npm run copy:json",
     "copy:json": "cpy \"src/**/*.json\" dist"
   },
   "devDependencies": {
-		"tsconfig-sherpa": "*",
-		"eslint-config-sherpa": "*",
+    "tsconfig-sherpa": "*",
+    "eslint-config-sherpa": "*",
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "cpy-cli": "^5.0.0"
