--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,10 +1,8 @@
 {
 	"extends": "tsconfig-sherpa/lib.json",
-	"rootDir": "./src",
 	"compilerOptions": {
-		"outDir": "./dist",
-		"rootDir": "./src",
-		"declaration": true
+		"outDir": "dist",
+		"rootDir": "src",
 	},
   "include": [
     "src/**/*.ts"
