--- a/packages/eslint-config-sherpa/package.json
+++ b/packages/eslint-config-sherpa/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
-    "@vercel/style-guide": "^4.0.2",
+    "@vercel/style-guide": "^5.1.0",
     "eslint-config-turbo": "^1.10.12"
+  },
+  "dependencies": {
+    "@next/eslint-plugin-next": "^14.0.4"
   }
 }
