--- a/packages/eslint-config-sherpa/package.json
+++ b/packages/eslint-config-sherpa/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "devDependencies": {
     "@vercel/style-guide": "^5.1.0",
-    "eslint-config-turbo": "^1.10.12"
+    "eslint-config-turbo": "^1.10.12",
+    "eslint-plugin-prettier": "^5.1.2"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.0.4"
