Initial monorepo setup

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -23,11 +23,10 @@
     "lint": "eslint \"src\""
   },
   "devDependencies": {
+    "@sherpa/configs": "*",
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "cpy-cli": "^5.0.0",
-    "eslint-config-sherpa": "*",
-    "rimraf": "^5.0.5",
-    "tsconfig-sherpa": "*"
+    "rimraf": "^5.0.5"
   }
 }
