--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,15 +17,14 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "@sherpa/data": "*",
-    "eslint-config-sherpa": "*",
     "idb": "^7.1.1",
     "next": "^13.4.19",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tsconfig-sherpa": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@sherpa/configs": "*",
     "cypress": "13.2.0",
     "cypress-axe": "^1.5.0",
     "cypress-recurse": "^1.35.2"
