--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "eslint-config-sherpa",
+  "name": "@sherpa/configs",
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.0.4",
     "@vercel/style-guide": "^5.1.0",
     "eslint-config-turbo": "^1.10.12",
     "eslint-plugin-prettier": "^5.1.2"
-  },
-  "dependencies": {
-    "@next/eslint-plugin-next": "^14.0.4"
   }
 }
