--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,14 +1,9 @@
 {
-	"extends": "@sherpa/configs/tsconfig.lib.json",
-	"compilerOptions": {
-		"outDir": "dist",
-		"rootDir": "src",
-	},
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-		"dist"
-  ]
+  "extends": "@sherpa/configs/tsconfig.lib.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
