--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -7,6 +7,7 @@
     "@next/eslint-plugin-next": "^14.0.4",
     "@vercel/style-guide": "^5.1.0",
     "eslint-config-turbo": "^1.10.12",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^5.1.2"
   }
 }
