--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@sherpa/configs": "*",
+    "@testing-library/cypress": "^10.0.1",
     "cypress": "13.2.0",
     "cypress-axe": "^1.5.0",
     "cypress-recurse": "^1.35.2"
