--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -46,6 +46,6 @@ jobs:
           build: npm run build
           project: apps/web
           spec: |
-            cypress/e2e/paths/home.cy.ts
-            cypress/e2e/paths/pages.cy.ts
-            cypress/e2e/paths/resources.cy.ts
+            **/cypress/e2e/paths/home.cy.ts
+            **/cypress/e2e/paths/pages.cy.ts
+            **/cypress/e2e/paths/resources.cy.ts
