--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -18,8 +18,12 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
-    "postbuild": "cpy \"src/**/*.json\" dist",
+    "build": "npm run build:ts && npm run build:json",
+    "build:ts": "tsc",
+    "build:json": "cpy \"src/**/*.json\" dist",
+    "dev": "npm run dev:ts & npm run dev:json",
+		"dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
+		"dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
     "lint": "eslint \"src\""
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "cpy-cli": "^5.0.0",
+    "nodemon": "^3.0.3",
     "rimraf": "^5.0.5"
   }
 }
