Data build script

--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDirs": [ "src", "scripts" ]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts", "scripts/**/*.ts"],
+  "exclude": ["node_modules", "dist"],
 }
