--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -2,6 +2,7 @@
   "name": "@sherpa/data",
   "version": "0.4.0",
   "private": true,
+  "type": "module",
   "exports": {
     ".": "./dist/index.js",
     "./*": {
@@ -17,6 +18,7 @@
     }
   },
   "scripts": {
+    "b": "tsx \"scripts/build.ts\"",
     "prebuild": "rimraf dist",
     "build": "run-s build:ts build:json",
     "build:ts": "tsc",
@@ -33,6 +35,7 @@
     "cpy-cli": "^5.0.0",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "tsx": "^4.7.0"
   }
 }
