--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,12 +3,10 @@
   "version": "0.4.0",
   "private": true,
   "type": "module",
+	"main": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js",
-    "./*": {
-      "import": "./dist/*.js",
-      "require": "./dist/*"
-    }
+    "./*": "./dist/*"
   },
   "typesVersions": {
     "*": {
@@ -18,11 +16,10 @@
     }
   },
   "scripts": {
-    "b": "tsx \"scripts/build.ts\" dist",
     "prebuild": "rimraf dist",
     "build": "run-s build:ts build:json",
-    "build:ts": "tsc",
-    "build:json": "cpy \"src/**/*.json\" dist",
+    "build:ts": "tsc --project tsconfig.build.json",
+    "build:json": "tsx \"./scripts/build.ts\" dist",
     "dev": "run-p dev:ts dev:json",
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
