--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -23,7 +23,7 @@
     "dev": "run-p dev:ts dev:json",
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
-    "lint": "eslint \"src\""
+    "lint": "eslint \"src\" \"scripts\""
   },
   "devDependencies": {
     "@sherpa/configs": "*",
