--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -16,7 +16,7 @@
     }
   },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "shx rm -rf \"dist\"",
     "build": "run-s build:ts build:json",
     "build:ts": "tsc",
     "build:json": "tsx \"./scripts/build.ts\" dist",
@@ -29,10 +29,9 @@
     "@sherpa/configs": "*",
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
-    "cpy-cli": "^5.0.0",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
-    "rimraf": "^5.0.5",
+    "shx": "^0.3.4",
     "tsx": "^4.7.0"
   }
 }
