--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -23,7 +23,8 @@
     "dev": "run-p dev:ts dev:json",
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
-    "lint": "eslint \"src\" \"scripts\""
+    "lint": "eslint \"src\" \"scripts\"",
+    "test": "vitest"
   },
   "devDependencies": {
     "@sherpa/configs": "*",
@@ -32,6 +33,7 @@
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "shx": "^0.3.4",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "vitest": "^1.2.2"
   }
 }
