--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -31,6 +31,7 @@
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "crawlee": "^3.7.2",
+    "file-type": "^19.0.0",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "playwright": "^1.41.1",
