--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -24,7 +24,8 @@
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
     "lint": "eslint \"src\" \"scripts\"",
-    "test": "vitest"
+    "test:paths": "vitest paths",
+		"test:resources": "vitest resources"
   },
   "devDependencies": {
     "@sherpa/configs": "*",
