--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -25,16 +25,19 @@
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
     "lint": "eslint \"src\" \"scripts\"",
     "test:paths": "vitest paths",
-		"test:resources": "vitest resources"
+    "test:resources": "vitest resources"
   },
   "devDependencies": {
     "@sherpa/configs": "*",
+    "@types/he": "^1.2.3",
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "cheerio": "^1.0.0-rc.12",
     "crawlee": "^3.7.2",
     "dotenv": "^16.4.1",
     "file-type": "^19.0.0",
+    "he": "^1.2.0",
+    "html-format": "^1.1.6",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "playwright": "^1.41.1",
