--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -17,16 +17,17 @@
   },
   "scripts": {
     "prebuild": "shx rm -rf \"dist\"",
-    "build": "run-s build:ts build:json",
+    "build": "run-s build:ts build:json build:db",
     "build:ts": "tsc",
     "build:json": "tsx \"./scripts/build.ts\" dist",
+    "build:db": "shx cp src/store/path/*.db dist/store/path && shx cp src/store/resource/*.db dist/store/resource",
     "dev": "run-p dev:ts dev:json",
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
     "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
     "lint": "eslint \"src\" \"scripts\"",
     "test:paths": "vitest paths",
     "test:resources": "vitest resources",
-		"db:create": "tsx \"./scripts/dbcreate.ts\" db"
+    "db:create": "tsx \"./scripts/dbcreate.ts\" db"
   },
   "devDependencies": {
     "@seald-io/nedb": "^4.0.4",
