--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -17,17 +17,15 @@
   },
   "scripts": {
     "prebuild": "shx rm -rf \"dist\"",
-    "build": "run-s build:ts build:json build:db",
+    "build": "run-s build:ts build:db",
     "build:ts": "tsc",
-    "build:json": "tsx \"./scripts/build.ts\" dist",
-    "build:db": "shx cp src/store/path/*.db dist/store/path && shx cp src/store/resource/*.db dist/store/resource",
-    "dev": "run-p dev:ts dev:json",
+    "build:db": "tsx \"./scripts/copy-db.ts\" src dist",
+    "dev": "run-p dev:ts dev:db",
     "dev:ts": "nodemon --watch src --ext ts --on-change-only --exec \"npm run build:ts\"",
-    "dev:json": "nodemon --watch src --ext json --on-change-only --exec \"npm run build:json\"",
+    "dev:db": "nodemon --watch src --ext db --on-change-only --exec \"npm run build:db\"",
     "lint": "eslint \"src\" \"scripts\"",
     "test:paths": "vitest paths",
-    "test:resources": "vitest resources",
-    "db:create": "tsx \"./scripts/dbcreate.ts\" db"
+    "test:resources": "vitest resources"
   },
   "devDependencies": {
     "@seald-io/nedb": "^4.0.4",
