--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -23,7 +23,8 @@
     "dev": "nodemon --watch src --ext ts,db --on-change-only --exec \"npm run build --ignore-scripts\"",
     "lint": "eslint \"src\" \"scripts\"",
     "test:paths": "vitest paths",
-    "test:resources": "vitest resources"
+    "test:resources": "vitest resources",
+    "update:resources": "tsx \"scripts/resources/update.ts\""
   },
   "devDependencies": {
     "@seald-io/nedb": "^4.0.4",
@@ -37,6 +38,7 @@
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
+    "open": "^10.1.0",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "playwright": "^1.41.1",
