--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -38,12 +38,15 @@
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
-    "open": "^10.1.0",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
+    "open": "^10.1.0",
     "playwright": "^1.41.1",
     "shx": "^0.3.4",
     "tsx": "^4.7.0",
     "vitest": "^1.2.2"
+  },
+  "dependencies": {
+    "zod": "^3.23.8"
   }
 }
