--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
-		"outDir": "dist",
-		"rootDir": "src"
+		"rootDir": "src",
+		"outDir": "dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist"]
 }
